transformed pde latex and Octave code

--- a/lefloch_sabr_fdm.bib
+++ b/lefloch_sabr_fdm.bib
@@ -177,6 +177,13 @@
   year={2002}
 }
 
+@article{hagan2013change,
+  title={Change of Variables and Conservative Numerical Schemes},
+  author={Hagan, Patrick S},
+  journal={Not published},
+  year={2013}
+}
+
 @article{hagan2013arbitrage,
   title={Arbitrage free SABR},
   author={Hagan, Patrick S and Kumar, Deep and Lesniewski, Andrew S and Woodward, Diana E},
