--- a/lefloch_kennedy_sabr_fdm_transform_short.tex
+++ b/lefloch_kennedy_sabr_fdm_transform_short.tex
@@ -48,7 +48,7 @@ In \citep{hagan2013arbitrage}, pricing with SABR parameters $\alpha, \beta, \rho
 \end{cases}
 \end{align}
 with
-\begin{alignat}{2}
+\begin{alignat}{3}
 M(T,F) = \frac{1}{2} D^2(F) E(T,F) \text{, } E(T,F) = e^{\rho\nu\alpha\Gamma(F) T} \text{, } \Gamma(F) = \frac{F^{\beta}-f^{\beta}}{F-f}\\
 D(F) = \sqrt{\alpha^2 +2\alpha\rho\nu y(F)+ \nu^2 y(F)^2} F^{\beta} \text{, } y(F) = \frac{F^{1-\beta}-f^{1-\beta}}{1-\beta}
 \end{alignat}
@@ -88,7 +88,7 @@ The probability at the boundaries accumulates according to:
 \frac{\partial P_R}{\partial T}(T) &= \lim_{z \to z^{+}}  -\frac{1}{2} \frac{1}{C(z)} \frac{\partial C(z)E(T,z)\theta(T,z)}{\partial z}
 \end{align}
 
-As a result, the effect of the diffusion term $D$ has almost been cancelled, and the probability density $\theta$ is closer to a Gaussian in $z$. $z^+$ and $z^-$ are then naturally chosen to be $\pm n_{sd}\sqrt{T}$, corresponding to $n_{sd}$ standard deviations above and below the forward located at $z=0$ (taking care of truncating at the barrier $F=0$ if necessary). Figure \ref{fig:Fz} shows that the probability density will be computed with a high concentration of points around the forward, and a much lower one near the upper boundary.
+As a result, the effect of the diffusion term $D$ has almost been cancelled, and the probability density $\theta$ is closer to a Gaussian in $z$. $z^+$ and $z^-$ are then naturally chosen to be $\pm n_{sd}\sqrt{\tau_{ex}}$, corresponding to $n_{sd}$ standard deviations above and below the forward located at $z=0$ (taking care of truncating at the barrier $F=0$ if necessary). Figure \ref{fig:Fz} shows that the probability density will be computed with a high concentration of points around the forward, and a much lower one near the upper boundary.
 
 \begin{figure}[htb]
   \begin{center}  
@@ -125,6 +125,7 @@ $n_{sd}$ & Points & Steps & Price & Vol\\
 \end{table} 
 The number of points used can not be too small: the forward should not be on the boundary. This restriction is much stricter for the uniform discretization of $Q$ than for the discretization in the changed variable $\theta$.
 
+
 \section{Crank-Nicolson Oscillations with SABR}\label{section_cn}
 \begin{figure}[htb]
   \begin{center}  
@@ -154,28 +155,76 @@ Figure \ref{fig:density_hagan_cn_500_40} shows strong oscillations around the fo
 In our example, in Figures \ref{fig:density_hagan_cn_500_40} and \ref{fig:density_hagan_cn_500_40_5} $\Psi_Q \approx 15$ while Figure \ref{fig:density_hagan_cn_500_1280_5} shows that indeed when $\Psi < 1$ there are no oscillations. The Crank-Nicolson oscillations are even stronger with the PDE in $\theta$ as for $\alpha \ll 1$, we have $\Psi_{\theta} \gg \Psi_Q$. Using the same SABR parameters and $n_{sd}=3$ (corresponding to $F_{max} \approx 5$), $\Psi_{\theta} \approx 250$. In the next sections it is shown that a much smaller number of time steps can be used with other finite difference time-stepping techniques whilst still preserving good accuracy.
 
 \section{Alternative Schemes}
-The boundary condition described by equation (\ref{boundary_condition}) is applicable to all schemes considered in this section as it is independent of the time-stepping.
+We will focus our analysis on the PDE in $\theta$, but similar conclusion can be drawn for the PDE in $Q$.
+\subsection{Discretization of the the PDE in $\theta$}
+Let's define for $j=1,...,J$:
+\begin{alignat}{3}
+z_j &= z^{-} + jh \text{ , } \hat{y}_j&=y(z_j - \frac{1}{2}h) \text{ , } \hat{F}_j&=F(\hat{y}_j)\\
+\hat{C}_j&=D(\hat{F}_j) \text{ , } \hat{\Gamma}_j &= \frac{{\hat{F}_j}^{\beta}-f^{\beta}}{\hat{F}_j-f} \text{ , } \hat{E}_j(T)&=e^{\rho\nu\alpha\hat{\Gamma}_j T}
+\end{alignat}
+
+We also define for $n=0,...,N-1$
+\begin{align}
+t_n &= n \delta \text{ with } \delta = \frac{\tau_{ex}}{N} \\
+\theta_j^n &= \theta(z_j,t_n)
+\end{align}
+
+To preserve the zero-eth and first moment of $F$, the PDE (Equation \ref{eqn-transform-pde}) is discretized in $z$ as \citep{hagan2013change}:
+\begin{align}
+\frac{\partial \theta}{\partial T}(z, t_n) &= \mathcal{L}_{j}^n \theta(z, t_n)
+\end{align}
+for $j=1,...,J$ with $\mathcal{L}_{j}^n$ the discrete operator defined by
+\begin{align}
+  \mathcal{L}_{j}^n\theta(z_j, t_n) &= \frac{1}{h} \frac{\hat{C}_{j-1}}{\hat{F}_{j}-\hat{F}_{j-1}}\hat{E}_{j-1}(t_n)\theta(z_{j-1},t_n)\\
+  &-\frac{1}{h}\left(\frac{\hat{C}_{j}}{\hat{F}_{j+1}-\hat{F}_j}+\frac{\hat{C}_{j}}{\hat{F}_{j}-\hat{F}_{j-1}}\right)\hat{E}_{j}(t_n)\theta(z_j,t_n)\\
+  &+\frac{1}{h}\frac{\hat{C}_{j+1}}{\hat{F}_{j+1}-\hat{F}_j}\hat{E}_{j+1}(t_n)\theta(z_{j+1},t_n)
+\end{align}
+and for the boundaries at $j=0$ and $j=J+1$:
+\begin{subequations}\label{eqn:boundary_theta}
+\begin{align}
+\frac{\hat{C}_0}{\hat{F}_1-\hat{F}_0}\hat{E}_0(T) \theta(z_0,T) &= - \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\hat{E}_1(T) \theta(z_1,T) \\
+\frac{\hat{C}_{J+1}}{\hat{F}_{J+1}-\hat{F}_J}\hat{E}_{J+1}(T) \theta(z_{J+1},T) &= - \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_{J}}\hat{E}_J(T) \theta(z_J,T)
+\end{align}
+\end{subequations}
+The boundary condition described by equations (\ref{eqn:boundary_theta}) is applicable to all schemes considered in this section as it is independent of the time-stepping.
+
+The probability accumulated at the boundaries is discretized as:
+\begin{align}
+\frac{\partial P_L}{\partial T} (T) &= \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\hat{E}_1(T)\theta(z_1, T) \\
+\frac{\partial P_R}{\partial T} (T) &= \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\hat{E}_J(T)\theta(z_J, T) 
+\end{align}
+
+
 
 \subsection{Rannacher}
 A common fix for Crank-Nicolson oscillations related to non smooth initial data is Rannacher time-stepping \citep{rannacher1984finite, GiCa2006}. It consists of introducing two half time-steps of implicit Euler time-stepping before applying Crank-Nicolson, because implicit Euler has much stronger damping properties. This comes at a cost in accuracy as implicit Euler is an order-1 scheme in time, especially when only a few time-steps are needed. 
 The SABR density discretisation will still be moment preserving if we discretise the Euler half steps as:
-\begin{align}\label{eqn_euler_1}
-Q_j^{n+\frac{1}{2}}-Q_j^n &= \frac{\delta}{2h^2} \left(M_{j+1}^{n+\frac{1}{2}}Q_{j+1}^{n+\frac{1}{2}}-2M_j^{n+\frac{1}{2}}Q_j^{n+\frac{1}{2}}+M_{j-1}^{n+\frac{1}{2}}Q_{j-1}^{n+\frac{1}{2}} \right) \\
-\label{eqn_euler_2}
-Q_L^{n+\frac{1}{2}}-Q_L^n &= \frac{\delta}{2h} \left(M_{1}^{n+\frac{1}{2}}Q_{1}^{n+\frac{1}{2}}-M_0^{n+\frac{1}{2}}Q_0^{n+\frac{1}{2}}\right) \\
-Q_R^{n+\frac{1}{2}}-Q_R^n &= -\frac{\delta}{2h} \left(M_{J+1}^{n+\frac{1}{2}}Q_{J+1}^{n+\frac{1}{2}}-M_J^{n+\frac{1}{2}}Q_J^{n+\frac{1}{2}}\right) 
+\begin{subequations}\label{eqn_euler_1}
+\begin{align}
+\theta_j^{n+\frac{1}{2}}-\theta_j^n &= \frac{\delta}{2} \mathcal{L}_{j}^{n+\frac{1}{2}} \theta_j^{n+\frac{1}{2}} \\
+P_L (t_{n+\frac{1}{2}}) - P_L (t_{n}) &=   \frac{\delta}{2} \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\hat{E}_1(t_{n+1})\theta_1^{n+\frac{1}{2}} \\
+P_R (t_{n+\frac{1}{2}}) -  P_R (t_{n}) &=\frac{\delta}{2} \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\hat{E}_J(t_{n+1})\theta_J^{n+\frac{1}{2}}
 \end{align}
-for $j=1,...,J$ and $n=0,\frac{1}{2}, 1, \frac{3}{2}$.
+\end{subequations}
+for $j=1,...,J$ and $n = 0, \frac{1}{2}, 1, \frac{3}{2}$. The next steps are Crank-Nicolson:
+\begin{subequations}
+\begin{align}\label{eqn_cn_1}
+\theta_j^{n+1}-\theta_j^n &= \frac{\delta}{2} \left( \mathcal{L}_{j}^{n+1}\theta_j^{n+1} + \mathcal{L}_{j}^{n}\theta_j^{n} \right) \\
+P_L (t_{n+1})- P_L (t_{n}) &= \frac{\delta}{2} \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\left(\hat{E}_1(t_{n+1})\theta_1^{n+1}+\hat{E}_1(t_{n})\theta_1^{n} \right)\\
+P_R (t_{n+1})-P_R (t_{n}) &=  \frac{\delta}{2} \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\left(\hat{E}_J(t_{n+1})\theta_J^{n+1}+\hat{E}_J(t_{n})\theta_J^{n} \right)
+\end{align}
+\end{subequations}
+for $j=1,...,J$ and $n=2,...,N-1$.
 
 \subsection{Implicit Richardson Extrapolation}
-A simple Richardson extrapolation in time \citep{richardson1911approximate} on implicit Euler will also provide a nearly order-2 scheme in time, keeping strong damping properties of the implicit Euler scheme at the cost of increased computational load: the implicit Euler scheme (Equations \ref{eqn_euler_1}, \ref{eqn_euler_2}) is evaluated with $\frac{\delta}{2}$ and $\delta$. In practice it is around twice as slow as Crank-Nicolson. At $T=N\delta=\tau_{ex}$, we apply:
+A simple Richardson extrapolation in time \citep{richardson1911approximate} on implicit Euler will also provide a nearly order-2 scheme in time, keeping strong damping properties of the implicit Euler scheme at the cost of increased computational load: the implicit Euler scheme (equations \ref{eqn_euler_1}) is evaluated with $\frac{\delta}{2}$ and $\delta$. In practice it is around twice as slow as Crank-Nicolson. At $T=N\delta=\tau_{ex}$, we apply:
 \begin{align}\label{eqn_richardson}
-Q(F) &= 2 \hat{Q}^{\frac{\delta}{2}}(F) - \hat{Q}^{\delta}(F) \\
-Q_L &= 2 \hat{Q}^{\frac{\delta}{2}}_L - \hat{Q}^{\delta}_L\\
-Q_R &= 2 \hat{Q}^{\frac{\delta}{2}}_R - \hat{Q}^{\delta}_R
+\theta(z) &= 2 \bar{\theta}^{\frac{\delta}{2}}(z) - \bar{\theta}^{\delta}(z) \\
+P_L &= 2 \bar{P}^{\frac{\delta}{2}}_L - \bar{P}^{\delta}_L\\
+P_R &= 2 \bar{P}^{\frac{\delta}{2}}_R - \bar{P}^{\delta}_R
 \end{align}
 
-where $\hat{Q}^{\delta}$ is $Q$ computed by implicit Euler with a time step of $\delta$.
+where $\bar{\theta}^{\delta}, \bar{P}_L^{\delta}, \bar{P}_R^{\delta}$ are $\theta, P_L, P_R$ computed by implicit Euler with a time step of $\delta$.
 
 
 \subsection{Lawson-Morris-Gourlay}
@@ -185,12 +234,12 @@ For the second order scheme, at each time-step, equation (\ref{eqn_richardson}) 
 For the third order scheme, at each time-step we apply:
 %\begin{subequations}
 \begin{align}\label{eqn_lmg3}
-Q(F) &= 4.5 \hat{Q}^{\frac{\delta}{3}}(F) - 4.5 \hat{Q}^{\frac{2\delta}{3}}(F)  + \hat{Q}^{\delta}(F)\\
-Q_L &= 4.5 \hat{Q}^{\frac{\delta}{3}}_L - 4.5 \hat{Q}^{\frac{2\delta}{3}}_L  + \hat{Q}^{\delta}_L\\
-Q_R &= 4.5 \hat{Q}^{\frac{\delta}{3}}_R - 4.5 \hat{Q}^{\frac{2\delta}{3}}_R  + \hat{Q}^{\delta}_R
+\theta(F) &= 4.5 \bar{\theta}^{\frac{\delta}{3}}(F) - 4.5 \bar{\theta}^{\frac{2\delta}{3}}(F)  + \bar{\theta}^{\delta}(F)\\
+P_L &= 4.5 \bar{P}^{\frac{\delta}{3}}_L - 4.5 \bar{P}^{\frac{2\delta}{3}}_L  + \bar{P}^{\delta}_L\\
+P_R &= 4.5 \bar{P}^{\frac{\delta}{3}}_R - 4.5 \bar{P}^{\frac{2\delta}{3}}_R  + \bar{P}^{\delta}_R
 \end{align}
 %\end{subequations}
-where $\hat{Q}^{\frac{\delta}{3}}$ is $Q$ computed by implicit Euler with 3 time steps of $\frac{\delta}{3}$ and $\hat{Q}^{\frac{2\delta}{3}}$ is $Q$ computed by implicit Euler with a time step of $\frac{2\delta}{3}$ and $\frac{\delta}{3}$. Being linear combinations of implicit Euler, those schemes are moment preserving.
+where $\bar{\theta}^{\frac{\delta}{3}}$ is $\theta$ computed by implicit Euler with 3 time steps of $\frac{\delta}{3}$ and $\bar{\theta}^{\frac{2\delta}{3}}$ is $\theta$ computed by implicit Euler with a time step of $\frac{2\delta}{3}$ and $\frac{\delta}{3}$. Being linear combinations of implicit Euler, those schemes are moment preserving.
 
 \subsection{Lawson-Swayne}
 A slightly faster second order unconditionally stable scheme is presented as a remedy to Crank-Nicolson in \citep{lawson1976simple, lawson1978extrapolation}. Let $b=1-\frac{\sqrt{2}}{2}$, it consists in applying two implicit Euler steps with time-step of $b\delta$ and an extrapolation on the values at those two steps.\\
@@ -199,21 +248,21 @@ First stage:
 \begin{subequations}
 \begin{align}\label{eqn_lawson_swayne}
 \begin{split}
-Q_j^{n+b}-Q_j^n &= \frac{b\delta}{h^2} \left(M_{j+1}^{n+b}Q_{j+1}^{n+b}-2M_j^{n+b}Q_j^{n+b}+M_{j-1}^{n+b}Q_{j-1}^{n+b} \right) \\
-Q_L^{n+b}-Q_L^n &= \frac{b\delta}{h} \left(M_{1}^{n+b}Q_{1}^{n+b}-M_0^{n+b}Q_0^{n+b}\right) \\
-Q_R^{n+b}-Q_R^n &= -\frac{b\delta}{h} \left(M_{J+1}^{n+b}Q_{J+1}^{n+b}-M_J^{n+b}Q_J^{n+b}\right)
+\theta_j^{n+b}-\theta_j^n &= b\delta \mathcal{L}_{j}^{n+b}\theta_j^{n+b} \\
+P_L (t_{n+b}) - P_L (t_{n}) &=   b\delta \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\hat{E}_1(t_{n+b})\theta_1^{n+b} \\
+P_R (t_{n+b}) -  P_R (t_{n}) &=b\delta \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\hat{E}_J(t_{n+b})\theta_J^{n+b}
 \end{split}\\
 \intertext{Second stage:}
 \begin{split}
-Q_j^{n+2b}-Q_j^{n+b} &= \frac{b\delta}{h^2} \left(M_{j+1}^{n+2b}Q_{j+1}^{n+2b}-2M_j^{n+2b}Q_j^{n+2b}+M_{j-1}^{n+2b}Q_{j-1}^{n+2b} \right) \\
-Q_L^{n+2b}-Q_L^{n+b} &= \frac{b\delta}{h} \left(M_{1}^{n+2b}Q_{1}^{n+2b}-M_0^{n+2b}Q_0^{n+2b}\right) \\
-Q_R^{n+2b}-Q_R^{n+b} &= -\frac{b\delta}{h} \left(M_{J+1}^{n+2b}Q_{J+1}^{n+2b}-M_J^{n+2b}Q_J^{n+2b}\right)
+\theta_j^{n+2b}-\theta_j^{n+b} &= b\delta \mathcal{L}_{j}^{n+2b}\theta_j^{n+2b} \\
+P_L (t_{n+2b}) - P_L (t_{n+b}) &=   b\delta \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0}\hat{E}_1(t_{n+2b})\theta_1^{n+2b} \\
+P_R (t_{n+2b}) -  P_R (t_{n+b}) &=b\delta \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\hat{E}_J(t_{n+2b})\theta_J^{n+2b}
 \end{split}\\
 \intertext{And finally:}
 \begin{split}
-Q_j^{n+1} &= (\sqrt{2}+1) Q_j^{n+2b} - \sqrt{2}Q_j^{n+b}\\
-Q_L^{n+1} &= (\sqrt{2}+1) Q_L^{n+2b} - \sqrt{2} Q_L^{n+b}\\
-Q_R^{n+1} &= (\sqrt{2}+1)  Q_R^{n+2b} - \sqrt{2} Q_R^{n+b}
+\theta_j^{n+1} &= (\sqrt{2}+1) \theta_j^{n+2b} - \sqrt{2}\theta_j^{n+b}\\
+P_L(t_{n+1}) &= (\sqrt{2}+1) P_L(t_{n+2b}) - \sqrt{2} P_L(t_{n+b})\\
+P_R(t_{n+1}) &= (\sqrt{2}+1)  P_R(t_{n+2b}) - \sqrt{2} P_R(t_{n+b})
 \end{split}
 \end{align}
 \end{subequations}
@@ -225,19 +274,29 @@ The scheme is moment preserving as it can also be seen as a linear combination o
 TR-BDF2 is a two-stage method where the first stage consists in applying the (weighted) trapezoidal rule (Crank-Nicolson) and the second stage consists in applying the second order backward difference scheme (BDF2) on the first stage result and the first stage initial input \citep{bank1985transient, Le07}. It is second order accurate in time and $L$-stable. It is not to be confused with the simpler multistep method BDF2: the full step only depends on the previous full step while BDF2 depends on the two previous timesteps and can lose its accuracy \citep{windcliff2001shout} with variable timesteps and linear complimentary problems. This scheme does not suffer from such drawbacks. The scheme has been applied to finance in the context of American option pricing \citep{floc2013tr}.
 \begin{subequations}
 \begin{align}
-Q^{n+\alpha} &= Q^n + \frac{\alpha \delta}{2}\left(\frac{\partial^2 M^{n} Q^n}{\partial F^2}+\frac{\partial^2 M^{n+\alpha} Q^{n+\alpha}}{\partial F^2}\right)\\
-Q^{n+1} &= \frac{1}{2-\alpha}\left(\frac{1}{\alpha} Q^{n+\alpha} - \frac{(1-\alpha)^2}{\alpha}Q^n + \delta(1-\alpha)\frac{\partial^2 M^{n+1} Q^{n+1}}{\partial F^2}\right)
+\intertext{First stage:}\label{eqn_trbdf2}
+\begin{split}
+\theta_j^{n+\alpha}-\theta_j^n &= \frac{\alpha \delta}{2}\left( \mathcal{L}_{j}^{n+\alpha}\theta_j^{n+\alpha} +\mathcal{L}_{j}^{n}\theta_j^{n}  \right)\\
+P_L (t_{n+\alpha}) &= P_L (t_{n}) +  b\delta \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0} \left( \hat{E}_1(t_{n+\alpha})\theta_1^{n+\alpha}+\hat{E}_1(t_{n})\theta_1^{n} \right)\\
+P_R (t_{n+\alpha}) &=P_R (t_{n})+ b\delta \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J}\left( \hat{E}_J(t_{n+\alpha})\theta_J^{n+\alpha}+ \hat{E}_J(t_{n})\theta_J^{n} \right)
+\end{split}\\
+\intertext{Second stage:}
+\begin{split}
+\theta_j^{n+1} &= \frac{1}{2-\alpha}\left(\frac{1}{\alpha} \theta_j^{n+\alpha} - \frac{(1-\alpha)^2}{\alpha}\theta_j^n + \delta(1-\alpha) \mathcal{L}_j^{n+1} \theta_j^{n+1}\right)\\
+P_L(t_{n+1}) &= \frac{1}{2-\alpha}\left(\frac{1}{\alpha} P_L(t_{n+\alpha}) - \frac{(1-\alpha)^2}{\alpha}P_L(t_n) + \delta(1-\alpha)  \frac{\hat{C}_1}{\hat{F}_1-\hat{F}_0} \hat{E}_1(t_{n+1})\theta_1^{n+1})\right)\\
+P_R(t_{n+1}) &= \frac{1}{2-\alpha}\left(\frac{1}{\alpha} P_R(t_{n+\alpha}) - \frac{(1-\alpha)^2}{\alpha}P_R(t_n) + \delta(1-\alpha)  \frac{\hat{C}_J}{\hat{F}_{J+1}-\hat{F}_J} \hat{E}_J(t_{n+1})\theta_J^{n+1})\right)
+\end{split}
 \end{align}
 \end{subequations}
 
 The weight $\alpha$ can be chosen to match Crank-Nicolson ($\alpha=\frac{1}{2}$) or to have proportional Jacobians ($\alpha = 2-\sqrt{2}$). The later provides optimal stability \citep{dharmaraja2009optimal}. 
 
-This can be extended to three-stages, with two stages of the trapezoidal rule and one stage of third order backward difference scheme (BDF3) as in \citep{bathe2005composite}, resulting in a method with even stronger damping properties:
+This can be extended to three-stages, with two stages of the trapezoidal rule and one stage of third order backward difference scheme (BDF3) as in \citep{bathe2005composite}, resulting in a method with even stronger damping properties (TR-BDF3):
 \begin{subequations}
 \begin{align}
-Q^{n+\frac{1}{3}} &= Q^n + \frac{\delta}{6}\left(\frac{\partial^2 M^{n} Q^n}{\partial F^2}+\frac{\partial^2 M^{n+\frac{1}{3}} Q^{n+\frac{1}{3}}}{\partial F^2}\right)\\
-Q^{n+\frac{2}{3}} &= Q^n + \frac{\delta}{6}\left(\frac{\partial^2 M^{n+\frac{1}{3}} Q^{n+\frac{1}{3}}}{\partial F^2}+\frac{\partial^2 M^{n+\frac{2}{3}} Q^{n+\frac{2}{3}}}{\partial F^2}\right)\\
-Q^{n+1} &= \frac{1}{11}\left( 18 Q^{n+\frac{2}{3}} - 9Q^{n+\frac{1}{3}} + 2Q^n + 2\delta\frac{\partial^2 M^{n+1} Q^{n+1}}{\partial F^2}\right)
+\theta_j^{n+\frac{1}{3}} &= \theta_j^n + \frac{\delta}{6}\left(\mathcal{L}_j^{n} \theta_j^n+\mathcal{L}_j^{n+\frac{1}{3}} \theta_j^{n+\frac{1}{3}}\right)\\
+\theta_j^{n+\frac{2}{3}} &= \theta_j^n + \frac{\delta}{6}\left( \mathcal{L}_j^{n+\frac{1}{3}} \theta_j^{n+\frac{1}{3}}+\mathcal{L}_j^{n+\frac{2}{3}} \theta_j^{n+\frac{2}{3}}\right)\\
+\theta_j^{n+1} &= \frac{1}{11}\left( 18  \theta_j^{n+\frac{2}{3}} - 9 \theta_j^{n+\frac{1}{3}} + 2 \theta_j^n + 2\delta\mathcal{L}_j^{n+1} \theta_j^{n+1}\right)
 \end{align}
 \end{subequations}
 
@@ -279,7 +338,7 @@ In contrast, Crank-Nicolson had strong oscillations visible at $T=\tau_{ex}$ wit
 
 \subsection{Performance}
 \subsubsection{Hagan Example}
-With the same parameters as in section \ref{section_cn}, we look at the maximum error in the probability density with a varying number of time-steps compared to a Crank-Nicolson scheme with 5120 points for the rate dimension and 81920 time-steps. 
+With the same parameters as in section \ref{section_cn}, we look at the maximum error in the probability density with a varying number of time-steps compared to a Crank-Nicolson scheme with 5120 points for the rate dimension enough time-steps to ensure that $\Phi_{\theta} < 1$. 
 
 \begin{figure}[htb]
   \begin{center}  
@@ -310,7 +369,7 @@ We consider the SABR parameters used in \citep{andreasen2011zabr}: $\alpha=0.087
 
 %show convergence graph
 
-Only 2 time-steps are enough with  LMG3 for good accuracy, and 5 for LMG2, LS, RAN and TR-BDF2. 
+Only 3 time-steps are enough with LS and TR-BDF3 for a Black implied volatility accuracy better than 0.1\%, 4 for TR-BDF2 and LMG3, 5 for LMG2, 15 for RAN. 
 
 \section{Conclusion}
 It is possible to accurately compute option prices under the arbitrage free SABR approach with very few time-steps, even for long maturities. The Rannacher smoothing is a particularly simple and efficient way to improve accuracy significantly compared to Crank-Nicolson on this problem. Other schemes such as TR-BDF2 or Lawson-Swayne can be even more efficient. In our experiments TR-BDF2 and Lawson-Swayne were robust and had similar stability and convergence properties.
@@ -322,7 +381,7 @@ Thus, with a careful choice of finite difference scheme, \citep{hagan2013arbitra
 %\bibliographystyle{ieeetr}
 \bibliography{lefloch_sabr_fdm}
 \newpage
-
+\appendix
 \section{Example Code}
 For illustration purpose, we detail here Octave code (also working with Matlab) for pricing vanilla options under the Arbitrage Free SABR model using Lawson-Swayne method.
 %\lstset{caption={Scilab code for Arbitrage Free SABR with Lawson-Swayne solver}, label=scilab_code}
@@ -445,6 +504,26 @@ end
 \end{lstlisting}
 \end{center}
 
+\section{Reference Implementation Values}
+\begin{table}[h]
+\begin{center}
+\begin{tabular}{|c|c|c|c|c|}
+\hline
+Scheme & ATM price & $\theta(0)$ & $P_L$ & $P_R$\\
+CN & 0.146401812646 & 68.433173016051 & 0.036626203406 & 0.000009377633\\
+RAN & 0.149506715205 & 0.485148325440 & 0.036827183880 & 0.000011560619\\
+RE & 0.149621279303 & 0.483887398092 & 0.036808451411 & 0.000004545780\\
+LMG2 & 0.149564709969 & 0.485131123139 & 0.036971755922 & 0.000004561707\\
+LMG3 & 0.149614813851 & 0.484413058295 & 0.036794424330 & 0.000007793877\\
+TRBDF2 & 0.149639390016 & 0.484017198494 & 0.036700345733 & 0.000008580444\\
+TRBDF3 & 0.149623393527 & 0.484271973888 & 0.036760496530 & 0.000007980928\\
+LS & 0.149639010577 & 0.484020689536 & 0.036701144774 & 0.000008583913\\
+\hline
+\end{tabular}
+\caption{Sample values using 500 points and 10 time-steps, $\alpha=35\%, \beta=0.25, \rho=-10\%, \nu=100\%, T=1, f=1, n_{sd}=4, \delta=0.1, h=0.012018637349$}
+\end{center}
+\end{table} 
+Checking the moments at every step is very useful way to validate a scheme's implementation in code. To support further validation we recorded specific values from our implementations as reference. The TR-BDF2 is using a value of $\alpha=2-\sqrt{2}$ whilst the RAN scheme is using Rannacher time-stepping for the first two full time-steps.
 %\section{TR-BDF2 vs TR-BDF3}
 %\subsection{First 4 steps}
 %\begin{figure}[htb]
