add density graphs for changed variable scheme

--- a/lefloch_kennedy_sabr_fdm_transform.tex
+++ b/lefloch_kennedy_sabr_fdm_transform.tex
@@ -210,13 +210,13 @@ For multi-stage schemes, it is also possible to consider $M$ as piecewise consta
 \begin{figure}[htb]
   \begin{center}  
   \subfigure[$t_N=T$]{\label{fig:density_hagan_ran_500_5_0}
-  \includegraphics[width=7cm]{density_hagan_ran_500_5.eps}}
-  \subfigure[Crank-Nicolson first 4 time steps with 5 time steps]{\label{fig:density_hagan_cn_500_5_5}
-\includegraphics[width=7cm]{density_hagan_cn_500_5_5.eps}}
+  \includegraphics[width=7cm]{density_hagan_theta_ran_500_5.eps}}
+  \subfigure[Crank-Nicolson first 4 time steps with 5 time steps]{\label{fig:theta_hagan_cn_500_5}
+\includegraphics[width=7cm]{theta_hagan_cn_500_5.eps}}
   \subfigure[Rannacher first 4 time steps with 5 time steps]{\label{fig:density_hagan_ran_500_5_5}
-\includegraphics[width=7cm]{density_hagan_ran_500_5_5.eps}}
-  \subfigure[LMG3 first 4 time steps with 5 time steps]{\label{fig:density_hagan_lmg3_500_5_5}
-\includegraphics[width=7cm]{density_hagan_lmg3_500_5_5.eps}}
+\includegraphics[width=7cm]{theta_hagan_ran_500_5.eps}}
+  \subfigure[Lawson-Swayne first 4 time steps with 5 time steps]{\label{fig:density_hagan_lmg3_500_5_5}
+\includegraphics[width=7cm]{theta_hagan_ls_500_5.eps}}
   \end{center}
      \caption{\label{fig:density_hagan_lmg2_500_10} Probability density in Hagan PDE using a total of 5 time-steps}
 \end{figure}
