add more reference for bdf2, update details

--- a/lefloch_sabr_fdm.bib
+++ b/lefloch_sabr_fdm.bib
@@ -1,3 +1,23 @@
+@article{windcliff2001shout,
+  title={{Shout options: A framework for pricing contracts which can be modified by the investor}},
+  author={Windcliff, H. and Forsyth, PA and Vetzal, KR},
+  journal={Journal of Computational and Applied Mathematics},
+  volume={134},
+  number={1-2},
+  pages={213--241},
+  year={2001},
+  publisher={Elsevier}
+}
+@article{pooley2003convergence,
+  title={{Convergence remedies for non-smooth payoffs in option pricing}},
+  author={Pooley, D.M. and Vetzal, K.R. and Forsyth, P.A.},
+  journal={Journal of Computational Finance},
+  volume={6},
+  number={4},
+  pages={25--40},
+  year={2003},
+  publisher={RISK PUBLICATIONS}
+}
 @article{flavell2013conservative,
   title={A Conservative Finite Difference Scheme for Poisson-Nernst-Planck Equations},
   author={Flavell, Allen and Machen, Michael and Eisenberg, Bob and Liu, Chun and Li, Xiaofan},
