--- a/lefloch_sabr_fdm.bib
+++ b/lefloch_sabr_fdm.bib
@@ -1,3 +1,10 @@
+@misc{andersen2010interest,
+  title={Interest Rate Modeling, Volume I: Foundations and Vanilla Models},
+  author={Andersen, Leif BG and Piterbarg, Vladimir V},
+  year={2010},
+  publisher={Atlantic Financial Press London}
+}
+
 @article{windcliff2001shout,
   title={{Shout options: A framework for pricing contracts which can be modified by the investor}},
   author={Windcliff, H. and Forsyth, PA and Vetzal, KR},
